--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "babelify": "^7.3.0",
     "browser-sync": "^2.18.8",
     "css-loader": "^0.26.2",
+    "echarts": "^4.1.0",
+    "echarts-for-react": "^2.0.11",
     "fetch": "^1.1.0",
     "fs": "0.0.1-security",
     "gulp": "^3.9.1",
@@ -46,6 +48,7 @@
     "react-redux": "^5.0.6",
     "react-responsive": "^1.2.6",
     "react-router": "^3.0.2",
+    "react-websocket": "^2.0.0",
     "redux-logger": "^3.0.6",
     "redux-simple-router": "^2.0.4",
     "redux-thunk": "^2.2.0",
