--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "path": "^0.12.7",
     "rc-color-picker": "^1.2.3",
     "react": "^15.6.2",
+    "react-date-range": "^0.9.4",
+    "react-datepicker": "^1.6.0",
     "react-dom": "^15.6.2",
     "react-draggable": "^3.0.3",
     "react-intl-universal": "^1.10.1",
