--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-intl-universal": "^1.10.1",
     "react-mixin": "^3.0.5",
     "react-native-listener": "^1.0.2",
+    "react-paypal-express-checkout": "^1.0.5",
     "react-redux": "^5.0.6",
     "react-responsive": "^1.2.6",
     "react-router": "^3.0.2",
